Pass library location to jmh